unpackaged/main/default/objects/Digital_Interaction_Data__c/Digital_Interaction_Data__c.object-meta.xml
<CustomObject>
    <label>Digital Interaction Data</label>
    <nameField>
        <displayFormat>DIA-{00000}</displayFormat>
        <label>Digital Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Interaction Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>