unpackaged/main/default/objects/Digital_Interaction_Data__c/fields/Browser_Location_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Browser_Location_Allowed__c</fullName>
    <label>Browser Location Available</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allowed</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>