unpackaged/main/default/objects/Digital_Interaction_Data__c/fields/Browser_Name__c.field-meta.xml
<CustomField>
    <fullName>Browser_Name__c</fullName>
    <label>Browser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>