unpackaged/main/default/objects/Digital_Interaction_Data__c/fields/Device_OS__c.field-meta.xml
<CustomField>
    <fullName>Device_OS__c</fullName>
    <label>Device OS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>