unpackaged/main/default/objects/Digital_Interaction_Data__c/fields/Location_Distance_Business__c.field-meta.xml
<CustomField>
    <fullName>Location_Distance_Business__c</fullName>
    <label>Location Distance Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>