unpackaged/main/default/objects/Digital_Interaction_Data__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Digital Interaction Data</relationshipLabel>
    <relationshipName>Digital_Interaction_Data</relationshipName>
    <type>Lookup</type>
</CustomField>